# ai-sentiment-service

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_create_analyses_table.py
api/app/: celery_app.py  config.py  download_model.py  exceptions.py  main.py  schemas.py  tasks.py
api/app/db/: models.py  session.py
api/app/ml/: base.py  onnx_model.py  pytorch_model.py
api/app/routers/: analyze.py  health.py  history.py  tasks.py
grafana/dashboards/: sentiment.json
grafana/provisioning/dashboards/: dashboards.yml
nginx/: nginx.conf
prometheus/: prometheus.yml
ui/: Dockerfile  app.py  pyproject.toml
