[project]
name = "ai-sentiment-api"
version = "1.0.0"
description = "Sentiment analysis API for Russian text"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "optimum[onnxruntime]>=1.19.0",
    "websockets>=12.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "prometheus-fastapi-instrumentator>=6.0.0",
]
